--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
 	"dependencies": {
 		"@ant-design/icons": "^4.7.0",
 		"antd": "^4.23.2",
+		"axios": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.4.1",
 		"react-scripts": "5.0.1",
 		"sass": "^1.55.0",
 		"socket.io-client": "^4.5.2",
