--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"mongoose": "^6.6.4",
 		"nodemon": "^2.0.20",
 		"socket.io": "^4.5.2",
+		"uuid": "^9.0.0",
 		"validator": "^13.7.0"
 	},
 	"devDependencies": {
