--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.1",
 		"react-scripts": "5.0.1",
+		"react-scroll-to-bottom": "^4.2.0",
 		"sass": "^1.55.0",
 		"socket.io-client": "^4.5.2",
 		"web-vitals": "^3.0.2"
@@ -22,6 +23,7 @@
 		"@types/node": "^16.7.13",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
+		"@types/react-scroll-to-bottom": "^4.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.38.0",
 		"@typescript-eslint/parser": "^5.38.0",
 		"eslint": "^8.23.1",
